--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ lib_ldf_mode = chain+
 lib_deps = 
 	https://github.com/micro-ROS/micro_ros_platformio
 	madhephaestus/ESP32Servo@^1.1.0
+	bblanchon/ArduinoJson @ ^7.4.1
 monitor_speed = 115200
 board_build.fielsystem = SPIFFS
 debug_port = /dev/ACM0
