--- a/extra_packages/custom_interfaces/CMakeLists.txt
+++ b/extra_packages/custom_interfaces/CMakeLists.txt
@@ -2,14 +2,11 @@ cmake_minimum_required(VERSION 3.5)
 
 project(custom_interfaces)
 
-# Default to C++14
-if(NOT CMAKE_CXX_STANDARD)
-  set(CMAKE_CXX_STANDARD 14)
-endif()
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
 endif()
 
+# find dependencies
 find_package(ament_cmake REQUIRED)
 find_package(rosidl_default_generators REQUIRED)
 find_package(std_msgs REQUIRED) 
@@ -18,8 +15,16 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/ServoMotor.msg"
   DEPENDENCIES std_msgs
 )
+if(BUILD_TESTING)
+  find_package(ament_lint_auto REQUIRED)
+  # the following line skips the linter which checks for copyrights
+  # comment the line when a copyright and license is added to all source files
+  set(ament_cmake_copyright_FOUND TRUE)
+  # the following line skips cpplint (only works in a git repo)
+  # comment the line when this package is in a git repo and when
+  # a copyright and license is added to all source files
+  set(ament_cmake_cpplint_FOUND TRUE)
+  ament_lint_auto_find_test_dependencies()
+endif()
 
-install(FILES mapping_rules.yaml DESTINATION share/${PROJECT_NAME})
-
-ament_export_dependencies(rosidl_default_runtime)
 ament_package()
