--- a/extra_packages/custom_interfaces/package.xml
+++ b/extra_packages/custom_interfaces/package.xml
@@ -12,15 +12,16 @@
   <author email="jonikind111@gmail.com">Joni0131</author>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-
-  <buildtool_depend>rosidl_default_generators</buildtool_depend>
+  <build_depend>rosidl_default_generators</build_depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
-
+  
   <member_of_group>rosidl_interface_packages</member_of_group>
+  <depend>std_msgs</depend>
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
-    <ros1_bridge mapping_rules="mapping_rules.yaml"/>
   </export>
 </package>
