--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ lib_deps =
 	bblanchon/ArduinoJson @ ^7.4.1
 monitor_speed = 115200
 board_build.fielsystem = SPIFFS
-debug_port = /dev/ttyACM0
+upload_port = /dev/ttyACM1
+upload_speed = 2000000
 debug_tool = esp-builtin
-debug_init_break = break setup
-monitor_port = /dev/ttyACM2
+monitor_port = /dev/ttyACM0
