--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,7 @@ lib_deps =
 	https://github.com/micro-ROS/micro_ros_platformio
 	madhephaestus/ESP32Servo@^1.1.0
 	bblanchon/ArduinoJson @ ^7.4.1
+	teckel12/NewPing@^1.9.7
 monitor_speed = 115200
 board_build.fielsystem = SPIFFS
 upload_port = /dev/ttyACM1
